
2007-08-06  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Autodetect the type of each argument:
	whether it's a domain or a team.

2007-08-04  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Remove the obsolete domain 'tp-robot';
	don't bother with texts that only translators will see.

2007-08-02  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Remove sentence about submission, since the
	translation could be made externally.  Remove duplication of
	assignee messages; check that the package is not both assigned
	and externally translated; say that PO file is announced to the
	maintainer only when this is actually the case.

2007-08-01  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/Makefile, webgen/whydisclaim.html: Install a copy of the
	AUTHORS file on the website, and link to it properly.

2007-07-31  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Relax the regex for author lines still
	further, but let a failing second tighter check issue a warning.

2007-07-28  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Do not take just the first author line,
	but all of them, in preparation for some better diagnostics.

	* bin/tp-robot: Do not bother later translators with changed email
	addresses of earlier translators.  Reorder the checks.

	* bin/tp-robot: Do not compare the last translator with the first
	author but with the last author.

	* bin/tp-robot: Check that the last year in the last author line is
	the current year.  This allows relaxing of the year-matching regex
	to include some future years.

	* lib/run.py: Mark rejection reason more clearly.

2007-07-27  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Put columns in the translators table in order of
	relevance: Assignments first, Personal website last.

	* registry/registry.sgml: Remove the obsolete domain 'gimp-print'.

2007-07-25  Benno Schulenberg  <benno@vertaalt.nl>
